--- a/assets/css/syntax-dark.css
+++ b/assets/css/syntax-dark.css
@@ -65,13 +65,13 @@
 /* Operator */ .chroma .o {  }
 /* OperatorWord */ .chroma .ow {  }
 /* Punctuation */ .chroma .p {  }
-/* Comment */ .chroma .c { color: #008800; background-color: #0f140f; font-style: italic }
-/* CommentHashbang */ .chroma .ch { color: #008800; background-color: #0f140f; font-style: italic }
-/* CommentMultiline */ .chroma .cm { color: #008800; background-color: #0f140f; font-style: italic }
-/* CommentSingle */ .chroma .c1 { color: #008800; background-color: #0f140f; font-style: italic }
-/* CommentSpecial */ .chroma .cs { color: #008800; background-color: #0f140f; font-style: italic }
-/* CommentPreproc */ .chroma .cp { color: #ff0007; background-color: #0f140f; font-weight: bold; font-style: italic }
-/* CommentPreprocFile */ .chroma .cpf { color: #ff0007; background-color: #0f140f; font-weight: bold; font-style: italic }
+/* Comment */ .chroma .c { color: #008800; background-color: var(--cbg); font-style: italic }
+/* CommentHashbang */ .chroma .ch { color: #008800; background-color: var(--cbg); font-style: italic }
+/* CommentMultiline */ .chroma .cm { color: #008800; background-color: var(--cbg); font-style: italic }
+/* CommentSingle */ .chroma .c1 { color: #008800; background-color: var(--cbg); font-style: italic }
+/* CommentSpecial */ .chroma .cs { color: #008800; background-color: var(--cbg); font-style: italic }
+/* CommentPreproc */ .chroma .cp { color: #ff0007; background-color: var(--cbg); font-weight: bold; font-style: italic }
+/* CommentPreprocFile */ .chroma .cpf { color: #ff0007; background-color: var(--cbg); font-weight: bold; font-style: italic }
 /* Generic */ .chroma .g {  }
 /* GenericDeleted */ .chroma .gd {  }
 /* GenericEmph */ .chroma .ge {  }
